--- a/BlazorApp7/BlazorApp7/Components/Layout/MainLayout.razor
+++ b/BlazorApp7/BlazorApp7/Components/Layout/MainLayout.razor
@@ -6,8 +6,10 @@
     </div>
 
     <main role="main" class="flex-1">
-        <article>
-            @Body
+        <article class="py-6">
+            <div class="px-4 sm:px-6 md:px-8">
+                @Body
+            </div>
         </article>
     </main>
     
