--- a/BlazorApp7.Components/Tailwind/Tables/Table.razor
+++ b/BlazorApp7.Components/Tailwind/Tables/Table.razor
@@ -1,4 +1,4 @@
-﻿@inherits UiComponentBase
+﻿@inherits UiComponentLiteBase
 
 <div class="relative w-full overflow-auto">
     <table class="@ClassNames("w-full caption-bottom text-sm", @class)" @attributes="AdditionalAttributes">
@@ -8,6 +8,4 @@
 
 @code {
     [Parameter] public RenderFragment? ChildContent { get; set; }
-
-    [Parameter(CaptureUnmatchedValues = true)] public IReadOnlyDictionary<string, object>? AdditionalAttributes { get; set; }
 }
