--- a/BlazorApp7/BlazorApp7.Client/_Imports.razor
+++ b/BlazorApp7/BlazorApp7.Client/_Imports.razor
@@ -12,5 +12,6 @@
 
 @using BlazorApp7.Components.Extensions
 @using BlazorApp7.Components.Tailwind
+@using BlazorApp7.Components.Tailwind.Cards
 @using BlazorApp7.Components.Tailwind.Tables
 @using static BlazorApp7.Components.Tailwind.Button
