--- a/BlazorApp7/BlazorApp7.Client/Pages/Dev.razor
+++ b/BlazorApp7/BlazorApp7.Client/Pages/Dev.razor
@@ -8,23 +8,5 @@
 <PageTitle>Dev</PageTitle>
 
 <AuthorizeView>
-     <Heading1>Developer Panel</Heading1>
-        <Card class="mx-auto max-w-xl">
-            <CardHeader>
-                <CardTitle>Welcome, @context.User.Identity?.Name!</CardTitle>
-                <CardDescription>You have developer access.</CardDescription>
-            </CardHeader>
-            <CardContent>
-                <!-- Developer-specific content goes here -->
-                <p class="text-gray-700">
-                    Use the tools and resources below to manage the application.
-                </p>
-                <!-- Example of nested cards or additional content -->
-            </CardContent>
-            <CardFooter>
-                <!-- Footer actions -->
-                <Button>Primary Action</Button>
-                <Button Variant="ButtonVariant.Outline">Secondary Action</Button>
-            </CardFooter>
-        </Card>
+    <Showcase />
 </AuthorizeView>
