Move ef to infrastructure project

--- a/BlazorApp7/BlazorApp7.Client/Pages/Admin/Roles.razor
+++ b/BlazorApp7/BlazorApp7.Client/Pages/Admin/Roles.razor
@@ -1,7 +1,4 @@
-﻿@using Microsoft.AspNetCore.Authorization
-
-@page "/admin/roles"
-@attribute [Authorize(Roles = "Admin")]
+﻿@page "/admin/roles"
 @rendermode InteractiveAuto
 
 <PageTitle>Roles</PageTitle>
