--- a/BlazorApp7/BlazorApp7.Client/Pages/Admin/Users.razor
+++ b/BlazorApp7/BlazorApp7.Client/Pages/Admin/Users.razor
@@ -1,7 +1,4 @@
-﻿@using Microsoft.AspNetCore.Authorization
-
-@page "/admin/users"
-@attribute [Authorize(Roles = "Admin")]
+﻿@page "/admin/users"
 @* @rendermode @(new InteractiveAutoRenderMode(false)) *@
 @rendermode InteractiveAuto
 
