--- a/BlazorApp7/BlazorApp7.Client/_Imports.razor
+++ b/BlazorApp7/BlazorApp7.Client/_Imports.razor
@@ -15,3 +15,5 @@
 @using BlazorApp7.Components.Tailwind.Cards
 @using BlazorApp7.Components.Tailwind.Tables
 @using static BlazorApp7.Components.Tailwind.Button
+
+@using BlazorApp7.Domain
