--- a/BlazorApp7/BlazorApp7/Components/Account/Pages/LoginWith2fa.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Pages/LoginWith2fa.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Account/LoginWith2fa"
 
 @using System.ComponentModel.DataAnnotations
+@using BlazorApp7.Domain.Entities
 @using Microsoft.AspNetCore.Identity
 @using BlazorApp7.Data
 @using static BlazorApp7.Components.Account.Pages.Login
