--- a/BlazorApp7/BlazorApp7/Components/Account/_Imports.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/_Imports.razor
@@ -1,1 +1,3 @@
-﻿@layout BlazorApp7.Components.Layout.MainLayout
+﻿@using BlazorApp7.Domain.Entities
+
+@layout BlazorApp7.Components.Layout.MainLayout
