--- a/BlazorApp7/BlazorApp7.Client/Pages/Dev.razor
+++ b/BlazorApp7/BlazorApp7.Client/Pages/Dev.razor
@@ -2,7 +2,7 @@
 
 @using Microsoft.AspNetCore.Authorization
 
-@attribute [Authorize(Roles = "Developer")]
+@attribute [Authorize(Roles = ApplicationRoles.Developer)]
 @rendermode InteractiveAuto
 
 <PageTitle>Dev</PageTitle>
