--- a/BlazorApp7/BlazorApp7/Components/Account/Pages/ConfirmEmail.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Pages/ConfirmEmail.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Account/ConfirmEmail"
 
 @using System.Text
+@using BlazorApp7.Domain.Entities
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using BlazorApp7.Data
