--- a/BlazorApp7/BlazorApp7/Components/Account/Pages/ExternalLogin.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Pages/ExternalLogin.razor
@@ -4,6 +4,7 @@
 @using System.Security.Claims
 @using System.Text
 @using System.Text.Encodings.Web
+@using BlazorApp7.Domain.Entities
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using BlazorApp7.Data
@@ -30,16 +31,16 @@
         logging in.
     </Alert>
 
-    <div class="mt-3 shadow overflow-hidden sm:rounded-md">
-        <div class="px-4 bg-white dark:bg-black sm:p-6">
+    <div class="mt-3 overflow-hidden shadow sm:rounded-md">
+        <div class="bg-white px-4 dark:bg-black sm:p-6">
             <EditForm id="confirmation-form" Model="Input" OnValidSubmit="OnValidSubmitAsync" FormName="confirmation" method="post">
                 <DataAnnotationsValidator />
-                <ValidationSummary class="mb-3 text-danger text-center font-semibold" />
+                <ValidationSummary class="mb-3 text-center font-semibold text-danger" />
 
                 <div class="flex flex-col gap-4">
                     <div>
                         <label for="email" class="@TextInput.LabelClasses">Email</label>
-                        <div class="mt-1 relative rounded-md shadow-sm">
+                        <div class="relative mt-1 rounded-md shadow-sm">
                             <InputText id="email" type="text" @bind-Value="Input.Email" class="@TextInput.InputClasses" autocomplete="email" placeholder="Please enter your email." />
                         </div>
                         <ValidationMessage For="() => Input.Email" class="mt-2 text-danger text-sm" />
