--- a/BlazorApp7/BlazorApp7/Components/Account/Pages/ForgotPassword.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Pages/ForgotPassword.razor
@@ -3,6 +3,7 @@
 @using System.ComponentModel.DataAnnotations
 @using System.Text
 @using System.Text.Encodings.Web
+@using BlazorApp7.Domain.Entities
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using BlazorApp7.Data
