--- a/BlazorApp7/BlazorApp7/Components/Account/Pages/Login.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Pages/Login.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Account/Login"
 
 @using System.ComponentModel.DataAnnotations
+@using BlazorApp7.Domain.Entities
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
 @using BlazorApp7.Data
