--- a/BlazorApp7/BlazorApp7/Components/Account/Pages/Manage/EnableAuthenticator.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Pages/Manage/EnableAuthenticator.razor
@@ -28,7 +28,7 @@ else
         <StatusMessage class="mb-3" />
         <div>
             <p>To use an authenticator app go through the following steps:</p>
-            <ol class="list-decimal ml-8">
+            <ol class="ml-8 list-decimal">
                 <li>
                     <p class="my-2">
                         Download a two-factor authenticator app like Microsoft Authenticator for
@@ -41,7 +41,7 @@ else
                 </li>
                 <li>
                     <p class="my-2">
-                        Scan the QR Code or enter this key <kbd class="bg-gray-100 dark:bg-gray-800 p-1 px-2 rounded-sm">@sharedKey</kbd> into your two factor authenticator app. Spaces and casing do not matter.
+                        Scan the QR Code or enter this key <kbd class="rounded-sm bg-gray-100 p-1 px-2 dark:bg-gray-800">@sharedKey</kbd> into your two factor authenticator app. Spaces and casing do not matter.
                     </p>
 
                     <Alert class="my-4" Type="AlertType.Information">
@@ -60,12 +60,12 @@ else
                         <div class="max-w-xs">
                             <EditForm id="send-code" Model="Input" FormName="send-code" OnValidSubmit="OnValidSubmitAsync" method="post">
                                 <DataAnnotationsValidator />
-                                <ValidationSummary class="mb-3 text-danger text-center font-semibold" />
+                                <ValidationSummary class="mb-3 text-center font-semibold text-danger" />
 
                                 <div class="flex flex-col gap-4">
                                     <div>
                                         <label for="code" class="@TextInput.LabelClasses">Verification Code</label>
-                                        <div class="mt-1 relative rounded-md shadow-sm">
+                                        <div class="relative mt-1 rounded-md shadow-sm">
                                             <InputText id="code" type="text" @bind-Value="Input.Code" class="@TextInput.InputClasses" autocomplete="off" placeholder="Please enter the code." />
                                         </div>
                                         <ValidationMessage For="() => Input.Code" class="mt-2 text-danger text-sm" />
