--- a/BlazorApp7/BlazorApp7.Client/Pages/Admin/_Imports.razor
+++ b/BlazorApp7/BlazorApp7.Client/Pages/Admin/_Imports.razor
@@ -1,2 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Authorization
 @attribute [Authorize(Roles = ApplicationRoles.Admin)]
+
+@using BlazorApp7.Domain.Entities
