--- a/src/BlazorApp/BlazorApp7.Client/Pages/Admin/_Imports.razor
+++ b/src/BlazorApp/BlazorApp7.Client/Pages/Admin/_Imports.razor
@@ -1,4 +1,6 @@
-﻿@using Microsoft.AspNetCore.Authorization
-@attribute [Authorize(Roles = ApplicationRoles.Admin)]
-
+﻿@using BlazorApp7.Domain.Common
 @using BlazorApp7.Domain.Entities
+@using BlazorApp7.Domain.DTOs
+@using Microsoft.AspNetCore.Authorization
+@attribute 	[Authorize(Roles = ApplicationRoles.Admin)]
+
